Reset border box

--- a/css/livegraph.css
+++ b/css/livegraph.css
@@ -1,6 +1,7 @@
 .livegraph-container {
 	background-color: #BCBCBC;
 	padding: 10px;
+	box-sizing: initial;
 }
 
 .livegraph-canvas-container canvas {
